--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
+  <script src="components/materialize.min.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="css/materialize.min.css">
+  <link rel="stylesheet" href="css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="css/icon.css">  
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo center">Barcode Scanner</a>
+      </div>
+    </nav>
 
+  <section>
+    <div class="row center">
+        <a class="btn-floating btn-large waves-effect waves-light teal darken-4"><i class="fas fa-barcode"></i></a>
+    </div>
+  </section>
 </body>
 
 </html>
