--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,32 @@
 
   <section class="app">
     <div class="row center">
-        <a class="btn-floating btn-large waves-effect waves-light pulse teal darken-4 pagInicial" id="scan"><i class="fas fa-barcode"></i></a>
+        <button class="btn-floating btn-large waves-effect waves-light pulse teal darken-4 pagInicial" id="scan"><i class="fas fa-barcode"></i></button>
     </div>
   </section>
+
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="img/280720550.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">iPad Mini Wi-Fi 64Gb - Cinza Espacial<i class="material-icons right">more_vert</i></span>
+        <p>R$ 3.499,00 </p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">iPad Mini Wi-Fi 64Gb - Cinza Espacial<i class="material-icons right">close</i></span>
+        <ul class="collection">
+          <li class="collection-item">Processador A12 Bionic<br> com arquitetura de 64 bits<br> Neural Engine Coprocessador<br> M12 integrado</li>
+          <li class="collection-item">Sistema operacional iOS</li>
+          <li class="collection-item">Tamanho da tela 7.9"</li>
+          <li class="collection-item">Tecnologia Wi-Fi</li>
+          <li class="collection-item"><b>Resolução da câmera</b> <br>Câmera traseira: 8MP <br> Câmera frontal: 7MP</li>
+          <li class="collection-item">GPS <span class="badge blue">Sim</span></li>
+          <li class="collection-item">GPS <span class="badge blue">Sim</span></li>
+        </ul>
+      </div>
+    </div>
+
 </body>
 
 </html>
